<resources>
    <string name="app_name">Kangu</string>
    <string name="name_user">Nombre de usuario</string>
    <string name="password">Contraseña</string>
    <string name="recover_password">¿Olvidaste tu contraseña?</string>
    <string name="login">Iniciar sesión</string>
    <string name="login_fb">INICIAR CON FACEBOOK</string>
    <string name="signup">Registrarse</string>

    <string name="facebook_app_id">229424357646877</string>
    <string name="fb_login_protocol_scheme">fb229424357646877</string>

    <string name="welcome">Bienvenido(a).</string>
    <string name="empty_inputs">Por favor rellene todos los campos.</string>
    <string name="invalid_user">Usuario/Clave inválidos.</string>
    <string name="unknown_error">Ha ocurrido un error desconocido. Compruebe su conexión a Internet.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <string name="item_home">Inicio</string>
    <string name="item_products">Productos</string>
    <string name="item_cart">Carrito</string>
    <string name="item_list">Listas</string>
    <string name="item_profile">Perfil</string>

    <string name="loading_categories">Cargando categorías...</string>
    <string name="info">Información</string>
    <string name="error">Ha ocurrido un error desconocido.</string>
    <string name="no_exist_products">No se han encontrado productos.</string>
    <string name="categories">Categorías</string>
    <string name="loading">Cargando...</string>
    <string name="no_exist_products_category">No existen productos asociados a ésta categoría.</string>
    <string name="name_product">Nombre del producto</string>
    <string name="call_product_details">Llamar al seleccionar producto</string>
    <string name="maturity">Madurez</string>
    <string name="add_to_cart">Agregar al carrito</string>
    <string name="add_to_list">Agregar a lista</string>
    <string name="no_connection">Compruebe su conexión a Internet.</string>
    <string name="back">Atras</string>
    <string name="email">Correo electrónico</string>
    <string name="confirm_password">Confirmar contraseña</string>

    <string name="usererror">Ingrese un usuario válido</string>
    <string name="usercharacterserror">Permitido letras, números y guiones</string>
    <string name="limitusererror">Ingrese entre 3-15 caracteres</string>
    <string name="emailerror">Ingrese un correo válido</string>
    <string name="passwordloginerror">Ingrese una contraseña válida</string>
    <string name="passworderror">Contraseña con mínimo ocho caracteres</string>
    <string name="passworconfirmderror">Las contraseñas no coinciden</string>
    <string name="user_exists">Este usuario ya existe.</string>
    <string name="mail_exists">Este correo ya exite.</string>
    <string name="validate_data">Validando datos...</string>
    <string name="added_to_cart">Agregado correctamente</string>
    <string name="updated_to_cart">Carrito actualizado</string>
    <string name="process_purchase">Procesar compra</string>
    <string name="create_list">Crear lista</string>
    <string name="total">Total</string>
    <string name="TOTAL">TOTAL</string>
    <string name="lorem_ipsum">Lorem Ipsum es simplemente el texto de relleno de las imprentas y archivos de texto. Lorem Ipsum ha sido el texto de relleno estándar de las industrias desde el año 1500, cuando un impresor (N. del T. persona que se dedica a la imprenta) desconocido usó una galería de textos y los mezcló de tal manera que logró hacer un libro de textos especimen.</string>
    <string name="edit">Editar</string>
    <string name="delete">Borrar</string>
    <string name="redo">Rehacer</string>
    <string name="save_changes">Guardar cambios</string>
    <string name="title">Titulo</string>
    <string name="different_qty_of_0">Digite una cantidad diferente de 0</string>
    <string name="button">Boton</string>
    <string name="lists">Listas</string>
    <string name="more">MÁS</string>
    <string name="no_data">No existen datos para mostrar.</string>
    <string name="see_more">VER MÁS</string>
    <string name="name_category">Nombre categoria</string>
    <string name="products_sale">Productos en descuento</string>
    <string name="name_list">Nombre de la lista</string>
    <string name="my_lists">Mis listas</string>
    <string name="create_new_list">Crear nueva lista</string>
    <string name="no_exist_lists">No tiene listas creadas.</string>
    <string name="program">Programar</string>
    <string name="see">Ver</string>
    <string name="details_list">Detalles de la lista</string>
    <string name="delete_list">Eliminar lista</string>
    <string name="done">Hecho</string>
    <string name="product_removed">Producto eliminado correctamente.</string>
    <string name="no_exist_products_list">No existen productos asociados a esta lista.</string>
    <string name="text">Texto</string>
    <string name="list_removed">Lista eliminada correctamente</string>
    <string name="add">Agregar</string>
    <string name="loading_lists">Cargando listas...</string>
    <string name="select_a_list">Seleccione por lo menos una Lista</string>
    <string name="product_added_to_the_lists">Producto agregado a la(s) lista(s)</string>
    <string name="delete_cart">Borrar carro</string>
    <string name="search">Buscar</string>
    <string name="search_products">Buscar productos</string>
    <string name="title_main">Principal</string>
    <string name="main_address">Direccion Principal</string>
    <string name="calendar">Calendario</string>
    <string name="next_delivery">Próxima Entrega</string>
    <string name="ene">Ene</string>
    <string name="number">26</string>
    <string name="my_profile">Mi Perfil</string>
    <string name="january">Enero</string>
    <string name="settings">Ajustes</string>
    <string name="logout">Cerrar sesión</string>
    <string name="coming_out">Saliendo...</string>
    <string name="no_exist_products_cart">No existen productos agregados en el carro.</string>
    <string name="shipping_address">Dirección de envío</string>
    <string name="schedule">Horario</string>
    <string name="process">Procesar</string>
    <string name="subcategory">Subcategoría</string>
    <string name="loading_subcategories">Cargando subcategorías...</string>
    <string name="schedule_list">Programar lista</string>
    <string name="subscribe_list">Suscribir lista</string>
    <string name="addresserror">Ingrese una dirección</string>
    <string name="scheduleerror">Ingrese una fecha de entrega</string>
    <string name="timeerror">Ingrese una hora de entrega</string>
    <string name="delete_address">Borrar dirección</string>
    <string name="loading_delete">Eliminando</string>
    <string name="deleted_address">Dirección eliminada</string>
    <string name="loading_adding">Agregando...</string>
    <string name="added_address">Dirección agregada.</string>
    <string name="name">Nombre</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="city">Ciudad</string>
    <string name="phoneerror">Ingrese un número de teléfono válido</string>
    <string name="generate_purchase_order">Generar orden de compra</string>
    <string name="please_add_product_list">Por favor agrege productos a la lista</string>
    <string name="number_products"># de Productos</string>
    <string name="number_articles"># de Artículos</string>
    <string name="select_address">Seleccionar dirección</string>
    <string name="loading_address">Cargando direcciones...</string>
    <string name="loading_processing">Procesando...</string>
    <string name="processed_order">Orden realizada.</string>
    <string name="there_is_not">No hay</string>
    <string name="orders_history">Historial de pedidos</string>
    <string name="order">Pedido</string>
    <string name="status">Estado:</string>
    <string name="order_details">Detalles del pedido</string>
    <string name="info_order">Información del pedido</string>
    <string name="creation_date">Fecha de creación</string>
    <string name="delivery_date">Fecha de entrega</string>
    <string name="place_delivery">Lugar de entrega</string>
    <string name="results_search">Resultados</string>
    <string name="clear_search_history">Borrar historial de búsqueda</string>
    <string name="list_programmed_correctly">Lista programada correctamente</string>
    <string name="next_events">Próximos eventos</string>
    <string name="payment_methods">Métodos de pago</string>
    <string name="make_order">Realizar orden</string>
    <string name="pay">Pagar</string>
    <string name="pay_payu">Pagar con payU</string>
    <string name="no_products_cart">No hay productos en el carrito.</string>
    <string name="delivery">Entrega</string>
    <string name="delivery_">Entrega:</string>
    <string name="delivery_every_days">Entrega cada (días)</string>
    <string name="deliveryerror">Ingrese un tiempo de entrega</string>
    <string name="cancel_subscription">Cancelar suscripción</string>
    <string name="subscribe">Suscribir</string>
    <string name="day_delivery">Día entrega</string>
    <string name="day_delivery_">Día entrega:</string>
    <string name="cancel_subscription_question">¿Desea cancelar la suscripción?</string>
    <string name="canceled_subscription">Suscripción cancelada</string>
    <string name="loading_cancel">Cancelando</string>
    <string name="list_does_not_have_subscription">Ésta lista no posee suscripción.</string>
    <string name="products_added">Productos agregados</string>
    <string name="my_addresses">Mis direcciones</string>
    <string name="assign_address">Asignar dirección</string>
    <string name="address_assigned">Dirección asignada</string>
    <string name="create_a_new_address">Crear una dirección nueva.</string>
    <string name="no_saved_addresses">No tiene direcciones guardadas.</string>

    <!--Google Analytics-->
    <string name="action_settings">Settings</string>
    <string name="title_activity_second">Second Activity</string>
    <string name="toast_track_exception">Exception is recorded. Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="toast_app_crash">The app will crash now! Check the Crashes and Exceptions on Google Dashboard!</string>
    <string name="fragment_footer">Fragment is loaded! Check the screen view on Google Analytics Dashboard.</string>
    <string name="msg_instructions">Click on each button to see the appropriate tracking on Google Analytics</string>
    <string name="btn_second_screen">Second Screen</string>
    <string name="btn_send_event">Track Event</string>
    <string name="btn_exception_tracking">Track Exception</string>
    <string name="btn_app_crash">Track App Crash</string>
    <string name="btn_load_fragment">Fragment Tracking</string>
    <string name="pay_against_delivery">Pagar contra entrega</string>
    <string name="order_correctly_made">Pedido realizado correctamente</string>
    <string name="orders">Pedidos</string>
    <string name="order_made">Pedido realizado</string>
    <string name="delivery_time">Hora de entrega</string>
    <string name="about">Acerca De</string>
    <string name="num_contact_text">Número contacto</string>
    <string name="num_contact">+57 0000000000</string>
    <string name="from_">A partir de:</string>
    <string name="suscribe">Suscribir</string>

</resources>
