<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.virtualtec.kangutest.InfoOrderFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <!-- Contents -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!--Pedido-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginLeft="6dp"
                    android:clipToPadding="true"
                    app:cardElevation="2dp">

                    <TextView
                        android:id="@+id/textview_order_infoOrder"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="5dp"
                        android:text="@string/order"
                        android:textSize="18sp"
                        android:textColor="@color/colorPrimary"/>
                </android.support.v7.widget.CardView>

                <!--Info-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:clipToPadding="true"
                    app:cardElevation="2dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textview_status_infoOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/status"
                            android:textSize="14sp"/>
                        <TextView
                            android:id="@+id/textview_creation_date_infoOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/creation_date"
                            android:textSize="14sp"/>
                        <TextView
                            android:id="@+id/textview_delivery_date_infoOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/delivery_date"
                            android:textSize="14sp"/>
                        <TextView
                            android:id="@+id/textview_products_infoOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/item_products"
                            android:textSize="14sp"/>
                        <TextView
                            android:id="@+id/textview_articles_infoOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/number_articles"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Lugar entrega-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:clipToPadding="true"
                    app:cardElevation="2dp"
                    android:layout_marginTop="10dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/place_delivery"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"/>
                        <TextView
                            android:id="@+id/textview_address_infoOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/address"
                            android:textSize="14sp"/>
                        <TextView
                            android:id="@+id/textview_city_infoOrder"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:padding="5dp"
                            android:text="@string/city"
                            android:textSize="14sp"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <!--Total-->
                <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="120dp"
                    android:layout_marginLeft="6dp"
                    android:layout_marginRight="6dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:clipToPadding="true"
                    app:cardElevation="2dp">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:weightSum="10">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="4"
                            android:padding="5dp"
                            android:text="@string/TOTAL"
                            android:textSize="16sp"/>
                        <TextView
                            android:id="@+id/textview_total_ordersDetails"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="6"
                            android:padding="5dp"
                            android:text="$0.0"
                            android:textSize="16sp"
                            android:textColor="@color/colorPrimary"
                            android:textAlignment="textEnd"/>
                    </LinearLayout>
                </android.support.v7.widget.CardView>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>