<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.virtualtec.kangutest.SettingsFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Contents-->
            <LinearLayout
                android:id="@+id/linear_loading_settings"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:gravity="center">

                <com.virtualtec.kangutest.ClassesCustom.GifView
                    android:id="@+id/loading_settings"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:layout_gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_content_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="15dp"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_user_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name_user">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_user_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_account"
                        android:inputType="text"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_name_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_name_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_account"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_email_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_email_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_mail"
                        android:inputType="text"
                        android:enabled="false"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_phone_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_phone_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_phone"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_address_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/address">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_address_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_location"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/text_input_city_settings"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/city">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_city_settings"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableLeft="@drawable/ic_location"
                        android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

                <Button
                    android:id="@+id/btn_save_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_marginTop="15dp"
                    android:layout_gravity="center"
                    android:textSize="12sp"
                    android:text="@string/save_changes"
                    android:background="@drawable/button_oval"
                    android:textColor="@color/colorWhite"/>

                <View
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/colorGray"/>

                <Button
                    android:id="@+id/btn_clear_search_settings"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="10dp"
                    android:text="@string/clear_search_history"
                    android:textSize="11sp"
                    android:background="@drawable/button_oval_white"
                    android:textColor="@color/colorPrimary"/>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>