<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="20dp"
        android:paddingLeft="35dp"
        android:paddingRight="35dp"
        android:background="#FFF"
        android:animateLayoutChanges="true"
        tools:context="com.virtualtec.kangutest.SignUpActivity">

        <LinearLayout
            android:id="@+id/linear_loading_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <com.virtualtec.kangutest.ClassesCustom.GifView
                android:id="@+id/loading_signup"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/validate_data"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relative_body_signup"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:animateLayoutChanges="true"
            android:background="#FFF">

            <ImageView
                android:id="@+id/lg_image"
                android:layout_width="wrap_content"
                android:layout_height="120dp"
                android:src="@drawable/logo_vertical"
                android:padding="10dp"
                android:layout_marginTop="40dp"
                android:layout_alignParentTop="true" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_below="@id/lg_image">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name"
                    android:layout_marginTop="10dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_user"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_account"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_mail"
                        android:inputType="textEmailAddress"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:inputType="textPassword"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/confirm_password">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_text_password_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_lock"
                        android:inputType="textPassword"/>

                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/button_signup"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/signup"
                android:textSize="12sp"
                android:background="@drawable/button_oval"
                android:layout_centerHorizontal="true"
                android:textColor="@color/colorWhite"
                android:layout_above="@+id/button_back_signup" />

            <Button
                android:id="@+id/button_back_signup"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/back"
                android:textColor="@color/colorPrimary"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:background="@drawable/button_oval_white"
                android:layout_alignParentBottom="true" />

        </RelativeLayout>

    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>